assets/css/style.css
:root {
--hue-neutral: 200;
--hue-wrong: 0;
--hue-correct: 145;
}

body {

padding: 0;
margin: 0;
display: flex;

height: 100vh;
justify-content: center;
align-items: center;
background-color: hsl(var(--hue), 100%, 20%);
}

h1 {
font-family: 'unbounded';
font-size: 35px;
letter-spacing: 3px;
color: gold;
}

#title {
    height: 3vh;
    margin: 4% 3% 1%;
    
}

#question {
font-family:'unbounded';
color: gold;
float: inherit;
}

.container {
    width: 800px;
    max-width: 80%vp;
    background-color:rgb(19, 54, 167);
    border-radius: 5px;
    padding: 10px;
    height: 45%vp
    
    }
    
    .btn-grid {
    display: grid;
    grid-template-columns: repeat(2, auto);
    gap: 10px;
    margin: 20px 0;
    }
    
    .btn {
    background-color:rgb(97, 97, 97);
    border-radius: 5px;
    padding: 5px 10px;
    color: rgb(255, 255, 255);
    outline: none;
    }
    
    .btn:hover {
    border-color: gold;
    }
    
    .btn.correct {
    background-color: green;
    color: rgb(0, 0, 0);

    }
    
    .btn.wrong {
    background-color: red;
    color: rgb(255, 255, 255);    
}
    
    .start-btn, .next-btn {
    font-family: unbounded;
    font-size: 1.8rem;
    font-weight: bold;
    padding: 10px 20px;
    }
    
    .controls {
    display: flex;
    justify-content: center;
    align-items: center;
    }
    
    .hide {
    display: none;
    }
    
    

